# open-oasis

./: attention.py  dit.py  game.py  pyproject.toml  train.py
open_oasis/: dweam.toml  dweam_game.py  generate.py  vae.py
open_oasis/thumbnails/: minecraft.webm
