[tool.poetry]
name = "open-oasis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {version = "2.4.1", source = "pytorch-cuda-121"}
torchvision = {version = "0.19.1", source = "pytorch-cuda-121"}
einops = "^0.8.0"
diffusers = "^0.31.0"
timm = "^1.0.12"
av = "^14.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cuda-121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
